# coursera-algorithms

part1/week01/hello/: HelloGoodbye.java  RandomWord.java
part1/week01/perlocation/: Percolation.java  PercolationStats.java
part1/week01/union-find/: QuickFindUF.java  QuickUnionUF.java
part1/week02/queues/: Deque.java  Permutation.java  RandomizedQueue.java
part1/week03/collinear/: BruteCollinearPoints.java  FastCollinearPoints.java  Point.java
part1/week03/collinear2/: BruteCollinearPoints.java  FastCollinearPoints.java  Point.java
part1/week04/8puzzle/: Board.java  Solver.java  puzzle.txt
part1/week05/kdtree/: KdTree.java  PointSET.java  query.txt
part2/week01/wordnet/: Outcast.java  SAP.java  WordNet.java
part2/week04/TRIE/: MyTST.java  TST.java  TrieST.java  shellsST.txt
part2/week04/TRIE_CPP_IMPLEMENTATOIN/TST/: CMakeLists.txt
part2/week04/TRIE_CPP_IMPLEMENTATOIN/TST/include/: TST.h
part2/week04/TRIE_CPP_IMPLEMENTATOIN/TST/src/: TST.cpp
part2/week05/Data_compression/: BinaryDump.java  HexDump.java  Huffman.java  LZW.java  PictureDump.java  RunLength.java
part2/week05/burrows/: BurrowsWheeler.java  CS_bricks.jpg.enc  CS_bricks.jpg.huf  CircularSuffixArray.java  Huffman.java  MoveToFront.java  abra.txt.enc  aesop.hhuf  aesop.txt  aesop.txt.enc  compress.sh  stars.txt.enc  us.gif.enc
